--- a/src/components/BasketItem/BasketItem.module.css
+++ b/src/components/BasketItem/BasketItem.module.css
@@ -1,5 +1,5 @@
 .basket_item {
-  padding: 10px;
+  padding: 10px 20px;
   border: 1px solid gray;
   display: grid;
   grid-template-columns: 50px 1fr auto 20px;
@@ -8,8 +8,22 @@
   gap: 10px;
   align-items: center;
   border-radius: 5px;
-  border: 1px solid #34495e;
+  /* border: 1px solid #34495e; */
+  border: none;
   box-shadow: 0 0 10px gray;
+}
+
+.title {
+  margin-left: 20px;
+  color: #34495e;
+  font-size: 18px;
+}
+
+.summ {
+  margin-right: 20px;
+  color: #34495e;
+  font-size: 18px;
+  font-weight: 700;
 }
 
 .basket_item img {
@@ -27,9 +41,12 @@
 
 .basket_item button {
   border: 1px solid #34495e;
+  background-color: #34495e;
+  color: white;
   border-radius: 25%;
   /* box-shadow: 0 0 10px gray; */
 }
+
 .basket_item button.red {
   background-color: rgb(200, 90, 90);
   color: white;
