--- a/src/components/ProductsFilterBar/ProductsFilterBar.module.css
+++ b/src/components/ProductsFilterBar/ProductsFilterBar.module.css
@@ -8,23 +8,34 @@
   border-radius: 5px;
 }
 
-.container input {
-  outline: #34495e;
-  border: 1px solid #34495e;
-  padding: 10px 20px;
-  width: 55%;
-  border-radius: 5px;
-  margin: 0 10px;
-}
-
 .container select {
   width: 150px;
-  border: 1px solid #34495e;
-  padding: 5px 10px;
+  border: 2px solid #34495e;
+  padding: 10px;
   margin-left: 10px;
   margin-right: 10px;
   border-radius: 5px;
+  height: 45px;
+  color: #34495e;
+  font-size: 16px;
 }
+
+/* .container select option {
+  color: #34495e;
+  font-size: 16px;
+} */
+
 .container select:focus {
   border: 2px solid #34495e;
+}
+
+.container input {
+  outline: #34495e;
+  border: 2px solid #34495e;
+  padding: 10px 20px;
+  width: 65%;
+  border-radius: 5px;
+  margin: 0 10px;
+  color: #34495e;
+  font-size: 16px;
 }
