--- a/src/components/CategoryItem/CategoryItem.module.css
+++ b/src/components/CategoryItem/CategoryItem.module.css
@@ -2,7 +2,6 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 10px 20px;
   border: 2px solid #34495e;
   border-radius: 5px;
   cursor: pointer;
@@ -10,6 +9,8 @@
   transition: all 0.5s ease;
 }
 .category_item a {
+  width: 100%;
+  text-align: center;
   text-decoration: none;
   font-size: 20px;
   font-weight: 700;
