--- a/src/components/Nav/Nav.module.css
+++ b/src/components/Nav/Nav.module.css
@@ -1,10 +1,12 @@
 .nav {
+  width: 100%;
   height: 60px;
   display: flex;
   justify-content: center;
   gap: 60px;
   align-items: center;
   background-color: #34495e;
+  position: fixed;
 }
 
 /* .nav a {
